tests/build/cases/widget/new_fn_first_arg_not_impl_ui_node.stderr
error[E0308]: mismatched types
 --> cases/widget/new_fn_first_arg_not_impl_ui_node.rs:7:42
  |
3 | #[widget($crate::test_widget)]
  | ------------------------------
  | |
  | the found opaque type
  | arguments to this function are incorrect
...
7 |     fn new(/* child: impl UiNode, */ id: WidgetId) {}
  |                                          ^^^^^^^^ expected struct `WidgetId`, found opaque type
  |
  = note:   expected struct `WidgetId`
          found opaque type `impl UiNode`
note: function defined here
 --> cases/widget/new_fn_first_arg_not_impl_ui_node.rs:7:8
  |
7 |     fn new(/* child: impl UiNode, */ id: WidgetId) {}
  |        ^^^---------------------------
