tests/build/cases/widget/new_fn_first_arg_not_impl_ui_node.rs
use zero_ui::core::widget;

#[widget($crate::test_widget)]
pub mod test_widget {
    use zero_ui::core::WidgetId;

    fn new(/* child: impl UiNode, */ id: WidgetId) {}
}

fn main() {}
